; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_htc_drv_init.c_ath9k_regread.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_htc_drv_init.c_ath9k_regread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hw = type { i32 }
%struct.ath_common = type { i64 }
%struct.ath9k_htc_priv = type { i32 }

@WMI_REG_READ_CMDID = common dso_local global i32 0, align 4
@WMI = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"REGISTER READ FAILED: (0x%04x, %d)\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @ath9k_regread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath9k_regread(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ath_hw*, align 8
  %7 = alloca %struct.ath_common*, align 8
  %8 = alloca %struct.ath9k_htc_priv*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to %struct.ath_hw*
  store %struct.ath_hw* %13, %struct.ath_hw** %6, align 8
  %14 = load %struct.ath_hw*, %struct.ath_hw** %6, align 8
  %15 = call %struct.ath_common* @ath9k_hw_common(%struct.ath_hw* %14)
  store %struct.ath_common* %15, %struct.ath_common** %7, align 8
  %16 = load %struct.ath_common*, %struct.ath_common** %7, align 8
  %17 = getelementptr inbounds %struct.ath_common, %struct.ath_common* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to %struct.ath9k_htc_priv*
  store %struct.ath9k_htc_priv* %19, %struct.ath9k_htc_priv** %8, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @cpu_to_be32(i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load %struct.ath9k_htc_priv*, %struct.ath9k_htc_priv** %8, align 8
  %23 = getelementptr inbounds %struct.ath9k_htc_priv, %struct.ath9k_htc_priv* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @WMI_REG_READ_CMDID, align 4
  %26 = call i32 @ath9k_wmi_cmd(i32 %24, i32 %25, i32* %10, i32 4, i32* %9, i32 4, i32 100)
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = call i64 @unlikely(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %38

30:                                               ; preds = %2
  %31 = load %struct.ath_common*, %struct.ath_common** %7, align 8
  %32 = load i32, i32* @WMI, align 4
  %33 = load i32, i32* %5, align 4
  %34 = load i32, i32* %11, align 4
  %35 = call i32 @ath_dbg(%struct.ath_common* %31, i32 %32, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %33, i32 %34)
  %36 = load i32, i32* @EIO, align 4
  %37 = sub i32 0, %36
  store i32 %37, i32* %3, align 4
  br label %41

38:                                               ; preds = %2
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @be32_to_cpu(i32 %39)
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %38, %30
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local %struct.ath_common* @ath9k_hw_common(%struct.ath_hw*) #1

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @ath9k_wmi_cmd(i32, i32, i32*, i32, i32*, i32, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @ath_dbg(%struct.ath_common*, i32, i8*, i32, i32) #1

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
